--- a/storm-core/src/ui/public/templates/index-page-template.html
+++ b/storm-core/src/ui/public/templates/index-page-template.html
@@ -169,7 +169,7 @@
     <tbody>
       {{#topologies}}
       <tr>
-        <td><a href="/topology.html?id={{encodedId}}">{{name}}</a></td>
+        <td><a href="/topology.html?name={{name}}">{{name}}</a></td>
         <td>{{owner}}</td>
         <td>{{status}}</td>
         <td>{{uptime}}</td>
